--- a/Vinylsg12/app/src/main/res/values/strings.xml
+++ b/Vinylsg12/app/src/main/res/values/strings.xml
@@ -1,16 +1,19 @@
 <resources>
     <string name="app_name">Vinyls g12</string>
-    <string name="title_home">Albums</string>
     <string name="tv_vinyl">Vinyl</string>
     <string name="btn_login">Log In</string>
     <string name="btn_signup">Sign Up</string>
     <string name="tv_collections">Collections</string>
-    <string name="title_dashboard">Dashboard</string>
     <string name="just_visit">Just visit collections</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Albums</string>
+    <string name="title_collectors">Collectors</string>
+    <string name="title_musicians">Musicians</string>
+    <string name="title_bands">Bands</string>
     <string name="navigation_drawer_open">Navigation drawer open</string>
     <string name="navigation_drawer_close">Navigation drawer close</string>
     <string name="drawer_toggle_description">Menu toggle</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
