--- a/Vinylsg12/app/src/main/res/values/strings.xml
+++ b/Vinylsg12/app/src/main/res/values/strings.xml
@@ -13,4 +13,13 @@
     <string name="navigation_drawer_open">Navigation drawer open</string>
     <string name="navigation_drawer_close">Navigation drawer close</string>
     <string name="drawer_toggle_description">Menu toggle</string>
+
+    <string name="hint_name">Name</string>
+    <string name="hint_cover_url">Cover url</string>
+    <string name="hint_release_date">Release date</string>
+    <string name="hint_description">Description</string>
+    <string name="hint_genre">Genre</string>
+    <string name="hint_record_label">Record label</string>
+    <string name="txt_create_album">Clic en el botón para crear un album</string>
+    <string name="btn_create_album">Create Album</string>
 </resources>
