--- a/Vinylsg12/app/src/main/res/values/strings.xml
+++ b/Vinylsg12/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="btn_create_album">Create Album</string>
     <string name="title_activity_collected_albums">Collector\'s Album</string>
     <string name="hint_collected_album_price">Price</string>
+    <string name="title_activity_band">BandActivity</string>
 </resources>
